--- a/scripts/css/style.css
+++ b/scripts/css/style.css
@@ -1,1 +1,10 @@
-@import url('bootstrap.css');
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : 2017-04-02, 20:44:43
+    Author     : Sammy Guergachi <sguergachi at gmail.com>
+*/
+@import url("bootstrap.css");
